--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html-HelloWorld>
 <html>
 <head>
-<title>Hello World!</title>
+<title>786 Allah Ho!</title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
